--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,28 @@
-*.pyc
-.*
-*.egg-info
-*.orig
-*.vim
-build
-_build
-/bin
-/dist
-/include
+# sphinx build directories
+_build/
 
-/share
-/man
-/lib
+# dotfiles
+.*
+# compiled python files
+*.py[co]
+# setup.py egg_info
+*.egg-info
+# emacs backup files
+*~
+# hg stuff
+*.orig
+status
+
+# generated for windows installer?
+install/win32/*.bat
+install/win32/meta.py
+
+# various virtualenv
+/bin/
+/build/
+/dist/
+/include/
+/lib/
+/man/
+/share/
+/src/
