[IMP] core: PEP420 native namespace
Native namespaces are modules that do not have an `__init__.py` file.
Python will make a union of all folders in its PYTHONPATH (sys.path) and
combine the modules found in these locations. Currenly, `odoo` uses
legacy namespace packages and implements this in an imperative way.

Using native namespaces allows for easier and more standard packaging
without conflicting libraries. It also allows tools that do static
analysis to find the files.

We move the code in the `odoo/__init__.py` file to its own package
`odoo.init` that is imported when the framework is starting. That
package should be imported first inside the framework to make sure all
monkeypatches are applied.

task-4035335
https://peps.python.org/pep-0420/

closes odoo/odoo#195664

Related: odoo/documentation#11914
Signed-off-by: Raphael Collet <rco@odoo.com>

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ _build/
 # dotfiles
 .*
 !.gitignore
+!.gitkeep
 !.github
 !.mailmap
 # compiled python files
@@ -20,7 +21,7 @@ status
 odoo/filestore
 # maintenance migration scripts
 odoo/addons/base/maintenance
-# window installation config file
+# windows installation config file
 /odoo.conf
 
 # generated for windows installer?
